# lab-05-stack-Skvortsovvv

./: CMakeLists.txt
include/: header.hpp
tests/: test.cpp
